Resolve code style issues